--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="telefon_tablet_kazan">Telefon Tablet Kazan</string>
     <string name="tatil_kazan">Tatil Kazan</string>
     <string name="takip_ettiklerim">Takip Ettiklerim</string>
+    <string name="ibrahim_taskin">İbrahim TAŞKIN</string>
+    <string name="email">taskinnibrahim@gmail.com</string>
 </resources>
